<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="60dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/title"
            android:textStyle="bold"
            android:textColor="@color/icons"
            android:textSize="5mm"
            android:layout_gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/username"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radio_button_french"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_fr"
                android:checked="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radio_button_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/radio_button_eng"/>
        </RadioGroup>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center"
            android:text="@string/button_login"/>

    </LinearLayout>
</ScrollView>