<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_view_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect"
        android:textSize="4mm"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:textColor="@color/primary_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_disconnect"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/button_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"/>

        <Button
            android:id="@+id/button_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginRight="30dp"/>


    </LinearLayout>


</RelativeLayout>