<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_view_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="3mm"
        android:textColor="@color/primary_text"
        android:layout_marginTop="30dp"
        android:gravity="center"/>

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/animals_category"
        android:layout_below="@id/text_view_category"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/primary"
        android:popupBackground="@color/primary"
                />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_view_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="2.5mm"
        android:textColor="@color/primary_text"
        android:layout_below="@id/spinner_category"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/linear_layout_text"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:orientation="horizontal"
        android:layout_below="@+id/text_view_information"
        android:layout_marginLeft="30dp"
        android:weightSum="1"
        android:layout_marginTop="50dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/show_cage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/cagesize"
            android:textColor="@color/primary_text"
            android:layout_below="@id/spinner_category"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/textview_cagesize"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cagesize"
            android:paddingTop="10dp"
            android:textSize="15sp">
          />
        </android.support.v7.widget.AppCompatEditText>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_layout_country"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:orientation="horizontal"
        android:layout_below="@+id/text_view_information"
        android:layout_marginLeft="30dp"
        android:weightSum="1">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/show_cagesize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/cage"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/textview_cage"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cage"
            android:paddingTop="10dp"
            android:textSize="15sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/text_view_information"
        android:layout_marginTop="200dp"
        android:layout_marginRight="30dp"
        android:id="@+id/linearLayout">

        <Button
        android:id="@+id/button_add_animal"
        android:layout_width="200px"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:text="@string/add"
        android:layout_weight="0.5"
        android:layout_below="@+id/linearLayout"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout" />

        <Button
            android:id="@+id/button_update_animal"
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/update"
            android:layout_weight="0.5"
            android:layout_alignTop="@+id/linearLayout"
            android:layout_centerHorizontal="true" />
    </LinearLayout>


</RelativeLayout>