<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_view_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="3mm"
        android:textColor="@color/primary_text"
        android:layout_marginTop="120dp"
        android:gravity="center"/>

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/animals_category"
        android:layout_below="@id/text_view_category"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/primary"
        android:popupBackground="@color/primary"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_view_cage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cage"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="3mm"
        android:textColor="@color/primary_text"
        android:layout_below="@id/spinner_category"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <Spinner
        android:id="@+id/spinner_cage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/cage_list"
        android:layout_below="@id/text_view_cage"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/primary"
        android:popupBackground="@color/primary"/>
    <LinearLayout
        android:id="@+id/linear_layout_country"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:orientation="horizontal"
        android:layout_below="@+id/text_view_information"
        android:layout_marginLeft="30dp"
        android:weightSum="1">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/show_foodname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/food"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/textview_foodname"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/food"
            android:paddingTop="10dp"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/spinner_cage"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <Button
            android:id="@+id/button_add_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_weight="0.5"/>

    </LinearLayout>


</RelativeLayout>